--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer student</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Seattle, wA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing video games, listening to music, watching sports, and learning about cars.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>San Diego, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a software developer because I love computers and technology and this job will allow me to work with these things every day.</p>
     </section>
 
     <footer id="footer">
